@@ -1,25 +1,25 @@
 package org.stellar.anchor.platform.config;
 
 import static java.lang.String.format;
-import static org.stellar.anchor.config.ClientsConfig.ClientType.CUSTODIAL;
-import static org.stellar.anchor.config.ClientsConfig.ClientType.NONCUSTODIAL;
 import static org.stellar.anchor.util.StringHelper.isEmpty;
 import static org.stellar.anchor.util.StringHelper.isNotEmpty;
 
+import jakarta.annotation.PostConstruct;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
-import javax.annotation.PostConstruct;
 import lombok.Data;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.validation.Errors;
 import org.springframework.validation.Validator;
+import org.stellar.anchor.client.ClientConfig;
+import org.stellar.anchor.client.ClientService;
+import org.stellar.anchor.client.NonCustodialClient;
 import org.stellar.anchor.config.AppConfig;
-import org.stellar.anchor.config.ClientsConfig.ClientConfig;
 import org.stellar.anchor.config.SecretConfig;
 import org.stellar.anchor.config.Sep10Config;
 import org.stellar.anchor.util.KeyUtil;
 import org.stellar.anchor.util.NetUtil;
-import org.stellar.anchor.util.StringHelper;
 import org.stellar.sdk.*;
 
 @Data
@@ -34,32 +34,28 @@ public class PropertySep10Config implements Sep10Config, Validator {
   private Integer jwtTimeout = 86400;
   private List<String> knownCustodialAccountList;
   private AppConfig appConfig;
-  private final PropertyClientsConfig clientsConfig;
+  private final ClientService clientService;
   private SecretConfig secretConfig;
   private boolean requireAuthHeader = false;
 
   public PropertySep10Config(
-      AppConfig appConfig, PropertyClientsConfig clientsConfig, SecretConfig secretConfig) {
+      AppConfig appConfig, ClientService clientService, SecretConfig secretConfig) {
     this.appConfig = appConfig;
-    this.clientsConfig = clientsConfig;
+    this.clientService = clientService;
     this.secretConfig = secretConfig;
     this.knownCustodialAccountList =
-        clientsConfig.getClients().stream()
-            .filter(cfg -> cfg.getType() == CUSTODIAL && !cfg.getSigningKeys().isEmpty())
+        clientService.getCustodialClients().stream()
             .flatMap(cfg -> cfg.getSigningKeys().stream())
             .collect(Collectors.toList());
   }
 
   @PostConstruct
   public void postConstruct() {
-    // Moving home_domain to home_domains. home_domain will be deprecated in 3.0
-    if (homeDomains == null || homeDomains.isEmpty()) {
-      homeDomains = List.of(homeDomain);
-      homeDomain = null;
-    }
-    // If webAuthDomain is not specified and there is 1 and only 1 domain in the home_domains
-    if (isEmpty(webAuthDomain) && homeDomains.size() == 1) {
-      webAuthDomain = homeDomains.get(0);
+    // If webAuthDomain is not specified and there is 1 and only 1 fixed domain in the home_domains
+    if (isEmpty(webAuthDomain)) {
+      if (homeDomains.size() == 1 && !homeDomains.get(0).contains("*")) {
+        webAuthDomain = homeDomains.get(0);
+      }
     }
   }
 
@@ -104,22 +100,13 @@ public class PropertySep10Config implements Sep10Config, Validator {
     KeyUtil.rejectWeakJWTSecret(
         secretConfig.getSep10JwtSecretKey(), errors, "secret.sep10.jwt_secret");
 
-    if (isEmpty(homeDomain) && (homeDomains == null || homeDomains.isEmpty())) {
-      // Default to localhost:8080 if neither is defined.
-      homeDomains = List.of("localhost:8080");
-    } else if (!isEmpty(homeDomain) && (homeDomains != null && !homeDomains.isEmpty())) {
-      // Reject if both are defined.
-      errors.rejectValue(
-          "homeDomain",
-          "home-domain-coexist",
-          "home_domain and home_domains cannot coexist. Please choose one to use.");
+    if (homeDomains == null || homeDomains.isEmpty()) {
+      errors.reject(
+          "sep10-home-domains-empty",
+          "Please set the sep10.home_domains or SEP10_HOME_DOMAINS environment variable.");
     } else {
-      if (!isEmpty(homeDomain)) {
-        validateDomain(errors, homeDomain);
-      } else {
-        for (String domain : homeDomains) {
-          validateDomain(errors, domain);
-        }
+      for (String domain : homeDomains) {
+        validateDomain(errors, domain);
       }
     }
 
@@ -131,7 +118,7 @@ public class PropertySep10Config implements Sep10Config, Validator {
             "webAuthDomain",
             "sep10-web-auth-domain-too-long",
             format(
-                "The sep10.web_auth_home_domain (%s) is longer than the maximum length (59) of a domain. Error=%s",
+                "The sep10.web_auth_domain (%s) is longer than the maximum length (59) of a domain. Error=%s",
                 webAuthDomain, iaex));
       }
 
@@ -168,10 +155,7 @@ public class PropertySep10Config implements Sep10Config, Validator {
   void validateClientAttribution(Errors errors) {
     if (clientAttributionRequired) {
       List<String> nonCustodialClientNames =
-          clientsConfig.clients.stream()
-              .filter(cfg -> cfg.getType() == NONCUSTODIAL)
-              .map(ClientConfig::getName)
-              .collect(Collectors.toList());
+          clientService.getNonCustodialClients().stream().map(ClientConfig::getName).toList();
 
       if (nonCustodialClientNames.isEmpty()) {
         errors.reject(
@@ -183,7 +167,7 @@ public class PropertySep10Config implements Sep10Config, Validator {
     // Make sure all the names in the allow list is defined in the clients section.
     if (clientAllowList != null && !clientAllowList.isEmpty()) {
       for (String clientName : clientAllowList) {
-        if (clientsConfig.getClientConfigByName(clientName) == null) {
+        if (clientService.getClientConfigByName(clientName) == null) {
           errors.reject(
               "sep10-client-allow-list-invalid",
               format("Invalid client name:%s in sep10.client_allow_list", clientName));
@@ -228,18 +212,18 @@ public class PropertySep10Config implements Sep10Config, Validator {
   public List<String> getAllowedClientDomains() {
     // if clientAllowList is not defined, all client domains from the clients section are allowed.
     if (clientAllowList == null || clientAllowList.isEmpty()) {
-      return clientsConfig.clients.stream()
-          .filter(cfg -> cfg.getDomains() != null && !cfg.getDomains().isEmpty())
+      return clientService.getNonCustodialClients().stream()
           .flatMap(cfg -> cfg.getDomains().stream())
           .collect(Collectors.toList());
     }
 
     // If clientAllowList is defined, only the clients in the allow list are allowed.
     return clientAllowList.stream()
-        .filter(name -> clientsConfig.getClientConfigByName(name) != null)
-        .filter(name -> clientsConfig.getClientConfigByName(name).getDomains() != null)
-        .flatMap(name -> clientsConfig.getClientConfigByName(name).getDomains().stream())
-        .filter(StringHelper::isNotEmpty)
+        .map(clientService::getClientConfigByName)
+        .filter(Objects::nonNull)
+        .filter(config -> config instanceof NonCustodialClient)
+        .filter(config -> ((NonCustodialClient) config).getDomains() != null)
+        .flatMap(config -> ((NonCustodialClient) config).getDomains().stream())
         .collect(Collectors.toList());
   }
 
@@ -247,9 +231,8 @@ public class PropertySep10Config implements Sep10Config, Validator {
   public List<String> getAllowedClientNames() {
     // if clientAllowList is not defined, all clients from the clients section are allowed.
     if (clientAllowList == null || clientAllowList.isEmpty()) {
-      return clientsConfig.clients.stream()
+      return clientService.getAllClients().stream()
           .map(ClientConfig::getName)
-          .filter(StringHelper::isNotEmpty)
           .collect(Collectors.toList());
     }
     return clientAllowList;
